@@ -239,6 +239,7 @@ Martin Waitz                    tali@admingilde.org
 Mathias Doreille                doreille@smr.ch
 Mathias Froehlich               M.Froehlich@science-computing.de
 Mathias Hasselmann              mathias.hasselmann@gmx.de
+Matt Burgess                    matthew@linuxfromscratch.org
 Matt Leach                      mleach@cygnus.com
 Matthew D. Langston             langston@SLAC.Stanford.EDU
 Matthias Andree                 matthias.andree@gmx.de
