@@ -112,6 +112,10 @@ Bugs fixed in 1.12.1:
         #line 7 "grammar.y"
     as it did before.
 
+* Bugs with new Perl versions:
+
+  - Aclocal works correctly with perl 5.16.0 (automake bug#11543).
+
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 New in 1.12:
